--- a/BaagiTech-TimeSheet/Src/Timesheet Details Approvals.fx.yaml
+++ b/BaagiTech-TimeSheet/Src/Timesheet Details Approvals.fx.yaml
@@ -8,6 +8,8 @@
         Items: =Timesheet
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
+        ShowNavigation: =true
+        ShowScrollbar: =false
         TemplatePadding: =0
         TemplateSize: =80
         Width: =1326
@@ -40,7 +42,7 @@
             Fill: =RGBA(219, 219, 219, 1)
             Height: =58
             OnSelect: =Select(Parent)
-            Text: =ThisItem.'Task'
+            Text: =ThisItem.Task
             Width: =988
             X: =4
             Y: =11
