--- a/BaagiTech-TimeSheet/Src/Timesheet Details Approvals.fx.yaml
+++ b/BaagiTech-TimeSheet/Src/Timesheet Details Approvals.fx.yaml
@@ -3,18 +3,18 @@
     "cmp_TimesheetDetails_Background As 'Screen Background'":
 
     "gal_TimeshetDetails_CheckTasks As gallery.'BrowseLayout_Vertical_OneTextVariant_ver5.0'":
+        BorderColor: =RGBA(255, 255, 255, 1)
         DelayItemLoading: =true
-        Height: =267
+        Height: =348
         Items: =Timesheet
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         ShowNavigation: =true
         ShowScrollbar: =false
-        TemplatePadding: =0
-        TemplateSize: =80
-        Width: =1326
-        X: =40
-        Y: =183
+        TemplateSize: =60
+        Width: =1305
+        X: =30
+        Y: =162
         ZIndex: =1
 
         lbl_TimesheetDetails_Tasks As label:
