--- a/BaagiTech-TimeSheet/Src/Timesheet Details Approvals.fx.yaml
+++ b/BaagiTech-TimeSheet/Src/Timesheet Details Approvals.fx.yaml
@@ -86,3 +86,41 @@
         Y: =131
         ZIndex: =5
 
+    TextInput1 As text:
+        BorderColor: =RGBA(255, 255, 255, 1)
+        Default: =""
+        Fill: =RGBA(219, 219, 219, 1)
+        Height: =102
+        Width: =813
+        X: =30
+        Y: =564
+        ZIndex: =6
+
+    Label1 As label:
+        Font: =Font.Georgia
+        FontWeight: =FontWeight.Semibold
+        Text: ="Reason"
+        X: =30
+        Y: =524
+        ZIndex: =7
+
+    Label2 As label:
+        Font: =Font.Georgia
+        FontWeight: =FontWeight.Semibold
+        Text: ="Total Hours"
+        X: =886
+        Y: =524
+        ZIndex: =8
+
+    Label3 As label:
+        Text: =
+        X: =886
+        Y: =580
+        ZIndex: =9
+
+    Button1 As button:
+        Text: ="Submit"
+        X: =1175
+        Y: =620
+        ZIndex: =10
+
