--- a/BaagiTech-TimeSheet/CanvasManifest.json
+++ b/BaagiTech-TimeSheet/CanvasManifest.json
@@ -138,6 +138,7 @@
     "Manager",
     "Timesheet Approvals",
     "Timesheet Details Approvals",
-    "Screen1"
+    "TimeSheet Landing Screen",
+    "Leave Status"
   ]
 }
