--- a/BaagiTech-TimeSheet/Src/Leave Application.fx.yaml
+++ b/BaagiTech-TimeSheet/Src/Leave Application.fx.yaml
@@ -420,7 +420,8 @@
         Font: =Font.Georgia
         OnSelect: |-
             =SubmitForm(Form1
-            );ResetForm(Form1)
+            );ResetForm(Form1);
+            Navigate('Leave Status')
         Text: ="Submit"
         X: =1167
         Y: =620
