--- a/BaagiTech-TimeSheet/Src/Timesheet Details Approvals.fx.yaml
+++ b/BaagiTech-TimeSheet/Src/Timesheet Details Approvals.fx.yaml
@@ -5,8 +5,8 @@
     "gal_TimeshetDetails_CheckTasks As gallery.'BrowseLayout_Vertical_OneTextVariant_ver5.0'":
         BorderColor: =RGBA(255, 255, 255, 1)
         DelayItemLoading: =true
-        Height: =355
-        Items: =Filter(Timesheet,'Employee Number' = Text(varEmployeeRecord.Mail))
+        Height: =327
+        Items: =Filter(Timesheet,'Employee Email' = varEmployeeRecord.Mail)
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         ShowNavigation: =true
@@ -14,39 +14,69 @@
         TemplateSize: =60
         Width: =1305
         X: =30
-        Y: =149
+        Y: =188
         ZIndex: =1
 
-        lbl_TimesheetDetails_Tasks As label:
+        Rectangle1 As rectangle:
             Fill: =RGBA(219, 219, 219, 1)
-            Height: =58
+            Height: =60
             OnSelect: =Select(Parent)
-            Text: =ThisItem.Task
-            Width: =1300
-            X: =4
-            Y: =11
+            Width: =1295
             ZIndex: =1
 
         lbl_TimesheetDetails_HoursWork As label:
+            Align: =Align.Center
             Fill: =RGBA(219, 219, 219, 1)
             Height: =58
             OnSelect: =Select(Parent)
-            Text: =ThisItem.'Total Hours'
+            Text: =ThisItem.Hours
             Width: =67
-            X: =1060
-            Y: =11
+            X: =865
+            Y: =1
             ZIndex: =2
 
         cbx_TimesheetDetails_Task As checkbox:
             BorderColor: =RGBA(0, 0, 0, 0)
             CheckboxBorderColor: =RGBA(166, 166, 166, 1)
+            Default: =cbx_TimesheetDetails_AllTasks.Value
             Font: =Font.Georgia
             Height: =58
+            OnCheck: |-
+                =UpdateIf(Timesheet,ID = ThisItem.ID,{'Approval Status':{Value:"Approved"}})
             Text: =""
+            Visible: =If(Label6.Text = "Approved",false,true)
             Width: =68
-            X: =1224
-            Y: =11
+            X: =1227
+            Y: =2
             ZIndex: =3
+
+        Label3 As label:
+            Height: =59
+            OnSelect: =Select(Parent)
+            Size: =12
+            Text: =ThisItem.Task
+            Width: =648
+            Y: =1
+            ZIndex: =4
+
+        Label4 As label:
+            Height: =58
+            OnSelect: =Select(Parent)
+            Text: =ThisItem.Date
+            Width: =171
+            X: =648
+            Y: =1
+            ZIndex: =5
+
+        Label6 As label:
+            Align: =Align.Center
+            Color: =If(Label6.Text = "Approved",Color.ForestGreen,Color.Blue)
+            Height: =57
+            OnSelect: =Select(Parent)
+            Text: =ThisItem.'Approval Status'.Value
+            X: =1004
+            Y: =2
+            ZIndex: =6
 
     icn_TimesheetDetails_Back As icon.BackArrow:
         Color: =RGBA(0, 0, 0, 1)
@@ -61,6 +91,8 @@
         CheckboxBorderColor: =RGBA(166, 166, 166, 1)
         Font: =Font.Georgia
         Height: =52
+        OnCheck: =
+        OnUncheck: =cbx_TimesheetDetails_Task.Value
         Text: ="Check All Tasks"
         Width: =232
         X: =30
@@ -74,7 +106,7 @@
         Text: ="Action"
         Width: =83
         X: =1252
-        Y: =134
+        Y: =160
         ZIndex: =4
 
     lbl_TimesheetDetails_HoursWorked As label:
@@ -82,8 +114,8 @@
         Height: =31
         Text: ="Hours Worked"
         Width: =132
-        X: =1080
-        Y: =131
+        X: =886
+        Y: =157
         ZIndex: =5
 
     txt_TimesheetDetails_Reason As text:
@@ -125,4 +157,54 @@
         X: =1175
         Y: =620
         ZIndex: =10
+
+    Label1 As label:
+        Align: =Align.Center
+        Color: =RGBA(255, 0, 0, 1)
+        Height: =77
+        Size: =18
+        Text: ="No record found..."
+        Visible: =If(CountRows(gal_TimeshetDetails_CheckTasks.AllItems)> 0,false,true)
+        Width: =741
+        X: =339
+        Y: =321
+        ZIndex: =11
+
+    lbl_TimesheetDetails_HoursWorked_2 As label:
+        FontWeight: =FontWeight.Semibold
+        Height: =31
+        Text: ="Date"
+        Width: =132
+        X: =691
+        Y: =158
+        ZIndex: =13
+
+    lbl_TimesheetDetails_HoursWorked_3 As label:
+        FontWeight: =FontWeight.Semibold
+        Height: =31
+        Text: ="Task"
+        Width: =98
+        X: =48
+        Y: =157
+        ZIndex: =14
+
+    lbl_TimesheetDetails_HoursWorked_1 As label:
+        FontWeight: =FontWeight.Semibold
+        Height: =29
+        Text: ="Approval Status"
+        Width: =151
+        X: =1059
+        Y: =162
+        ZIndex: =15
+
+    Label5 As label:
+        Align: =Align.Center
+        Fill: =RGBA(219, 219, 219, 1)
+        Height: =96
+        Size: =30
+        Text: =Sum(Filter(Timesheet,'Employee Email' = varEmployeeRecord.Mail).Hours,Hours)
+        Width: =130
+        X: =873
+        Y: =561
+        ZIndex: =16
 
