--- a/BaagiTech-TimeSheet/Src/Timesheet Details Approvals.fx.yaml
+++ b/BaagiTech-TimeSheet/Src/Timesheet Details Approvals.fx.yaml
@@ -6,7 +6,7 @@
         BorderColor: =RGBA(255, 255, 255, 1)
         DelayItemLoading: =true
         Height: =327
-        Items: =Filter(Timesheet,'Employee Email' = varEmployeeRecord.Mail)
+        Items: =Filter(Timesheet,'Employee Email' = varEmployeeRecord.Mail && 'Approval Status'.Value = "Pending")
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         ShowNavigation: =true
@@ -153,9 +153,13 @@
         ZIndex: =9
 
     btn_TimeSheetDetails_Submit As button:
+        FontWeight: =FontWeight.Bold
+        OnSelect: |-
+            =
+            RemoveIf();ForAll(gal_TimeshetDetails_CheckTasks.AllItems,UpdateIf(Timesheet,ID=ThisRecord.ID,{'Approval Status':{Value:"Approved"}}))
         Text: ="Submit"
         X: =1175
-        Y: =620
+        Y: =604
         ZIndex: =10
 
     Label1 As label:
@@ -202,9 +206,18 @@
         Fill: =RGBA(219, 219, 219, 1)
         Height: =96
         Size: =30
-        Text: =Sum(Filter(Timesheet,'Employee Email' = varEmployeeRecord.Mail).Hours,Hours)
+        Text: =Sum(Filter(Timesheet,'Employee Email' = varEmployeeRecord.Mail && 'Approval Status'.Value = "Approved").Hours,Hours)
         Width: =130
         X: =873
         Y: =561
         ZIndex: =16
+
+    Button2 As button:
+        OnSelect: |-
+            =ClearCollect(colTasksRecord,gal_TimeshetDetails_CheckTasks.AllItems);
+            RemoveIf(colTasksRecord,)
+        Text: ="Button"
+        X: =210
+        Y: =44
+        ZIndex: =17
 
