--- a/BaagiTech-TimeSheet/Src/Leave Application.fx.yaml
+++ b/BaagiTech-TimeSheet/Src/Leave Application.fx.yaml
@@ -414,7 +414,7 @@
                 Y: =DataCardKey8.Y
                 ZIndex: =4
 
-    btn_TimeSheet_Submit_1 As button:
+    btn_LeaveApplication_Submit As button:
         Color: =RGBA(0, 0, 0, 1)
         Fill: =RGBA(173, 216, 230, 1)
         Font: =Font.Georgia
