--- a/BaagiTech-TimeSheet/Src/EditorState/Timesheet Details Approvals.editorstate.json
+++ b/BaagiTech-TimeSheet/Src/EditorState/Timesheet Details Approvals.editorstate.json
@@ -1984,7 +1984,7 @@
         {
           "Category": "Data",
           "PropertyName": "Text",
-          "RuleProviderType": "User"
+          "RuleProviderType": "Unknown"
         },
         {
           "Category": "Data",
