--- a/BaagiTech-TimeSheet/Src/Time Sheet.fx.yaml
+++ b/BaagiTech-TimeSheet/Src/Time Sheet.fx.yaml
@@ -155,30 +155,31 @@
         Y: =95
         ZIndex: =24
 
-        Rectangle1_4 As rectangle:
-            Fill: =RGBA(241, 244, 249, 1)
-            Height: =74
-            OnSelect: =Select(Parent)
-            Visible: =varSelectedTab = ThisItem.ID
-            Width: =437
-            Y: =16
-            ZIndex: =1
-
         Button5_4 As button:
             BorderThickness: =1
             Color: =RGBA(0, 0, 0, 1)
             Fill: =RGBA(173, 216, 230, 1)
             Font: =Font.Georgia
             OnSelect: =Navigate(ThisItem.Screen);Select(Parent)
-            RadiusBottomLeft: =0
-            RadiusBottomRight: =0
-            RadiusTopLeft: =0
-            RadiusTopRight: =0
+            RadiusBottomLeft: =25
+            RadiusBottomRight: =25
+            RadiusTopLeft: =25
+            RadiusTopRight: =25
             Text: =ThisItem.Name
             Width: =177
             X: =130
             Y: =33
             ZIndex: =2
+
+        Rectangle1_4 As rectangle:
+            Fill: =RGBA(215, 223, 240, 1)
+            Height: =5
+            OnSelect: =Select(Parent)
+            Visible: =varSelectedTab = ThisItem.ID
+            Width: =177
+            X: =130
+            Y: =85
+            ZIndex: =3
 
     btn_TimeSheet_Submit As button:
         Color: =RGBA(0, 0, 0, 1)
@@ -188,7 +189,7 @@
             =Patch(
                 Timesheet,
                 Defaults(Timesheet),
-                {'Period Start  Date': Value(dte_TimeSheet_PeriodStartDate.SelectedDate),'Period End Date':Value(dte_TimeSheet_PeriodEndDate.SelectedDate),'Regular Hours':Value(txt_TimeSheet_RegularHours.Text),'Overtime Hours':Value(txt_TimeSheet_OverTimeHours.Text),'Total Hours':Value(txt_TimeSheet_TotalHours.Text),Date:Value(dte_TimeSheet_Date.SelectedDate),Task:txt_TimeSheet_Task.Text,'Employee Email':User().Email}
+                {'Period Start  Date': Value(dte_TimeSheet_PeriodStartDate.SelectedDate),'Period End Date':Value(dte_TimeSheet_PeriodEndDate.SelectedDate),'Regular Hours':Value(txt_TimeSheet_RegularHours.Text),'Overtime Hours':Value(txt_TimeSheet_OverTimeHours.Text),Date:Value(dte_TimeSheet_Date.SelectedDate),Task:txt_TimeSheet_Task.Text,'Employee Email':User().Email}
             );
             Navigate('TimeSheet Landing Screen');
             Reset(txt_TimeSheet_Task);
