--- a/BaagiTech-TimeSheet/Src/TimeSheet Landing Screen.fx.yaml
+++ b/BaagiTech-TimeSheet/Src/TimeSheet Landing Screen.fx.yaml
@@ -3,7 +3,7 @@
     "cmp_TimeSheet_Landing As 'Screen Background'":
         ZIndex: =2
 
-    "Gallery4_1 As gallery.'BrowseLayout_Vertical_OneImageThreeColumnVariant_ver5.0'":
+    "gal_TimeSheetLanding As gallery.'BrowseLayout_Vertical_OneImageThreeColumnVariant_ver5.0'":
         DelayItemLoading: =true
         Height: =425
         Items: =Timesheet
@@ -20,8 +20,8 @@
 
         icn_TimesheetApprovals_Backround_1 As rectangle:
             Fill: =RGBA(219, 219, 219, 1)
-            Height: =133
-            Width: =443
+            Height: =129
+            Width: =442
             ZIndex: =1
 
         lbl_TimesheetApprovals_Name_1 As label:
@@ -30,7 +30,7 @@
             Height: =46
             Size: =16
             Text: |-
-                ="Name: " 
+                ="Task : " 
             Width: =96
             Y: =15
             ZIndex: =2
@@ -41,14 +41,15 @@
             Height: =46
             Size: =16
             Text: |-
-                ="Date: " 
+                ="Date : " 
             Width: =85
-            Y: =53
+            Y: =79
             ZIndex: =3
 
         lbl_TimesheetApprovals_GivenName_1 As label:
             Font: =Font.Georgia
-            Text: =ThisItem.'Employee Email'
+            Size: =14
+            Text: =ThisItem.Task
             Width: =324
             X: =96
             Y: =21
@@ -59,30 +60,10 @@
             Text: =ThisItem.Created
             Width: =277
             X: =96
-            Y: =59
+            Y: =80
             ZIndex: =7
 
-        lbl_TimesheetApprovals_Email_4 As label:
-            Font: =Font.Georgia
-            FontWeight: =FontWeight.Semibold
-            Height: =46
-            Size: =16
-            Text: |-
-                ="Status: " 
-            Width: =96
-            Y: =87
-            ZIndex: =8
-
-        lbl_TimesheetApprovals_Mail_7 As label:
-            Color: =If(lbl_TimesheetApprovals_Mail_7.Text = "Approved",RGBA(54, 176, 75, 1),If(lbl_TimesheetApprovals_Mail_7.Text = "Rejected",Color.Red,If(lbl_TimesheetApprovals_Mail_7.Text = "Pending",Color.Blue)))
-            Font: =Font.Georgia
-            Text: =ThisItem.'Approval Status'.Value
-            Width: =277
-            X: =96
-            Y: =93
-            ZIndex: =9
-
-    btn_TimeSheet_Submit_2 As button:
+    btn_TimeSheet_AddNew As button:
         Color: =RGBA(0, 0, 0, 1)
         Fill: =RGBA(173, 216, 230, 1)
         Font: =Font.Georgia
@@ -92,6 +73,6 @@
             Transition.Pop
         Text: ="Add New"
         X: =1199
-        Y: =204
+        Y: =197
         ZIndex: =4
 
