--- a/BaagiTech-TimeSheet/Src/Timesheet Details Approvals.fx.yaml
+++ b/BaagiTech-TimeSheet/Src/Timesheet Details Approvals.fx.yaml
@@ -31,7 +31,7 @@
             Fill: =RGBA(219, 219, 219, 1)
             Height: =58
             OnSelect: =Select(Parent)
-            Text: =ThisItem.'Total Hours'
+            Text: =ThisItem.Total_Hours
             Width: =67
             X: =1060
             Y: =11
