--- a/BaagiTech-TimeSheet/Src/Travel Claim.fx.yaml
+++ b/BaagiTech-TimeSheet/Src/Travel Claim.fx.yaml
@@ -14,30 +14,31 @@
         Y: =95
         ZIndex: =2
 
-        Rectangle1_3 As rectangle:
-            Fill: =RGBA(241, 244, 249, 1)
-            Height: =74
-            OnSelect: =Select(Parent)
-            Visible: =varSelectedTab = ThisItem.ID
-            Width: =437
-            Y: =16
-            ZIndex: =1
-
         Button5_3 As button:
             BorderThickness: =1
             Color: =RGBA(0, 0, 0, 1)
             Fill: =RGBA(173, 216, 230, 1)
             Font: =Font.Georgia
             OnSelect: =Navigate(ThisItem.Screen);Select(Parent)
-            RadiusBottomLeft: =0
-            RadiusBottomRight: =0
-            RadiusTopLeft: =0
-            RadiusTopRight: =0
+            RadiusBottomLeft: =25
+            RadiusBottomRight: =25
+            RadiusTopLeft: =25
+            RadiusTopRight: =25
             Text: =ThisItem.Name
             Width: =177
             X: =130
             Y: =33
             ZIndex: =2
+
+        Rectangle1_5 As rectangle:
+            Fill: =RGBA(215, 223, 240, 1)
+            Height: =5
+            OnSelect: =Select(Parent)
+            Visible: =varSelectedTab = ThisItem.ID
+            Width: =177
+            X: =130
+            Y: =85
+            ZIndex: =3
 
     Form2 As form:
         DataSource: =Travel
@@ -834,7 +835,8 @@
         Font: =Font.Georgia
         OnSelect: |-
             =SubmitForm(Form2
-            );ResetForm(Form2)
+            );ResetForm(Form2);
+            Navigate('TravelClaim Landing Screen')
         Text: ="Submit"
         X: =1184
         Y: =612
